--- a/Frontend/src/Records/records.css
+++ b/Frontend/src/Records/records.css
@@ -268,10 +268,14 @@ textarea.modal-input {
 }
 
 
-.maps-btn{
-  
-  
-  width: 24px;
+.maps-btn {
+ 
+  height: 10px;
+
+}
+
+.maps-btn img{
+  width: 10px;
 }
 
 @media (max-width: 768px) {
