--- a/Frontend/src/Index/index.css
+++ b/Frontend/src/Index/index.css
@@ -540,8 +540,8 @@ form button:hover {
     gap: 12px;
     background: var(--background-color);
     color: var(--text-color);
-    padding: 1rem 1.5rem;
-    padding-right: 1.75rem;
+    padding: 1rem;
+    padding-right: 1.5rem;
     border-radius: 12px;
     min-width: 280px;
     max-width: 400px;
