--- a/Frontend/src/Records/records.css
+++ b/Frontend/src/Records/records.css
@@ -105,6 +105,51 @@ td.actions-cell>button:last-child {
   cursor: not-allowed;
 }
 
+
+
+
+.modalConfirm {
+  display: none;
+  position: fixed; /* Hace que el modal esté fijo en la pantalla */
+  top: 50%; /* Coloca el modal en el centro vertical */
+  left: 50%; /* Coloca el modal en el centro horizontal */
+  transform: translate(-50%, -50%); /* Ajusta para que el modal quede completamente centrado */
+  border-radius: 20px;
+  color: white;
+  background-color: var(--form-background-color);
+  border: 2px solid var(--link-color);
+  padding: 20px; /* Puedes ajustar el padding según el diseño que desees */
+  z-index: 1000; /* Asegura que el modal esté por encima de otros elementos */
+  width: 300px;
+}
+
+.modalConfirm p {
+  font-size: small;
+  text-align: center;
+}
+
+.buttons-confirm {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 10px;
+}
+
+.button-confirm-delete {
+  background-color: #00BCD4;
+  /* Color inicial */
+  color: white;
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  transition: background-color 0.3s ease;
+  /* Transición suave */
+}
+
+.button-confirm-delete:hover {
+  background-color: red;
+  /* Color al pasar el mouse */
+}
+
 .view-details-btn {
   background-color: transparent;
   color: #00bcd4;
