--- a/Frontend/src/Records/records.css
+++ b/Frontend/src/Records/records.css
@@ -20,12 +20,13 @@
   width: 100%;
 }
 
-.sightings-table  th img{
+.sightings-table th img {
   vertical-align: middle;
   height: 1.5em;
   margin-left: 5px;
   padding: 3px;
 }
+
 .sightings-table thead th {
   background-color: #1d4c54;
   padding: 1rem 0.5rem;
@@ -110,16 +111,22 @@ td.actions-cell>button:last-child {
 
 .modalConfirm {
   display: none;
-  position: fixed; /* Hace que el modal esté fijo en la pantalla */
-  top: 50%; /* Coloca el modal en el centro vertical */
-  left: 50%; /* Coloca el modal en el centro horizontal */
-  transform: translate(-50%, -50%); /* Ajusta para que el modal quede completamente centrado */
+  position: fixed;
+  /* Hace que el modal esté fijo en la pantalla */
+  top: 50%;
+  /* Coloca el modal en el centro vertical */
+  left: 50%;
+  /* Coloca el modal en el centro horizontal */
+  transform: translate(-50%, -50%);
+  /* Ajusta para que el modal quede completamente centrado */
   border-radius: 20px;
   color: white;
   background-color: var(--form-background-color);
   border: 2px solid var(--link-color);
-  padding: 20px; /* Puedes ajustar el padding según el diseño que desees */
-  z-index: 1000; /* Asegura que el modal esté por encima de otros elementos */
+  padding: 20px;
+  /* Puedes ajustar el padding según el diseño que desees */
+  z-index: 1000;
+  /* Asegura que el modal esté por encima de otros elementos */
   width: 300px;
 }
 
@@ -288,8 +295,8 @@ textarea.modal-input {
   transition: all 0.3s ease;
 }
 
-.pagination{
- padding: 1rem;
+.pagination {
+  padding: 1rem;
 }
 
 .pagination-controls {
@@ -300,7 +307,21 @@ textarea.modal-input {
 }
 
 .filters {
+  display: flex;
+  justify-content: space-between;
   padding: 1rem;
+}
+
+.generarPDF {
+  border-radius: 10px;
+  width: 100px;
+  background-color: #1e1e24;
+  border: 2px solid var(--primary-color);
+  color: white;
+}
+
+.generarPDF:hover{
+  background-color: var(--primary-color);;
 }
 
 .table-container {
@@ -314,22 +335,32 @@ textarea.modal-input {
 
 
 .maps-btn {
-  background-color: transparent; /* Fondo transparente */
-  border: none; /* Elimina bordes predeterminados del botón */
-  padding: 0; /* Elimina el padding del botón */
-  border-radius: 2px; /* Border radius */
-  
-  
+  background-color: transparent;
+  /* Fondo transparente */
+  border: none;
+  /* Elimina bordes predeterminados del botón */
+  padding: 0;
+  /* Elimina el padding del botón */
+  border-radius: 2px;
+  /* Border radius */
+
+
 }
 
 
 .maps-btn img {
-  height: 20px; /* Altura de la imagen */
-  width: 20px; /* Ancho de la imagen */
-  border-radius: 2px; /* Border radius de la imagen */
-  filter: none; /* Asegúrate de no tener filtros que alteren el color */
-  color: white; /* Cambia el color del SVG */
+  height: 20px;
+  /* Altura de la imagen */
+  width: 20px;
+  /* Ancho de la imagen */
+  border-radius: 2px;
+  /* Border radius de la imagen */
+  filter: none;
+  /* Asegúrate de no tener filtros que alteren el color */
+  color: white;
+  /* Cambia el color del SVG */
 }
+
 @media (max-width: 768px) {
 
   #registro {
@@ -442,22 +473,22 @@ textarea.modal-input {
     width: unset;
   }
 
-  .pagination{
+  .pagination {
     padding: 0;
     padding-block: 1rem;
-   }
+  }
 
-   .filters {
+  .filters {
     padding: 0;
     padding-block: 1rem;
-   }
+  }
 
-   .search-input {
+  .search-input {
     width: 100%;
     font-size: 1em;
     height: unset;
     padding: 1rem;
-   }
+  }
 }
 
 @media (max-width: 1600px) {
@@ -465,6 +496,7 @@ textarea.modal-input {
   .register-container {
     font-size: 0.8rem;
   }
+
   .col-large-screen {
     display: none;
   }
