nachito esta si

--- a/Frontend/src/Register/register.css
+++ b/Frontend/src/Register/register.css
@@ -245,6 +245,10 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+#powerMilitary option{
+  color : #000;
+}
+
 @media (max-width: 480px) {
   .container {
     padding: 16px;
