--- a/Frontend/src/Users/users.css
+++ b/Frontend/src/Users/users.css
@@ -259,19 +259,12 @@ h2 {
 
 /* Estilo para el botón de opciones de filtro */
 #filter-options-btn {
-  margin-left: 1rem;
   color: white;
   cursor: pointer;
-  width: 100px;
-  height: 40px;
+  padding: 0 1rem;
   border-radius: 5px;
   background: var(--form-background-color);
   border: 2px solid var(--primary-color);
-}
-
-#filter-options-btn svg {
-  width: 50%;
-  height: 38%;
 }
 
 #filter-options-btn:hover {
@@ -324,6 +317,7 @@ form input {
 .filters {
   padding: 1rem;
   display: flex;
+  gap: 10px;
 }
 
 .users-list {
