--- a/Frontend/src/Index/index.css
+++ b/Frontend/src/Index/index.css
@@ -660,7 +660,7 @@ form button:hover {
         padding: 0.5rem;
         top: 80px;
         width: calc(100% - 2rem);
-        margin: 0.5rem 0;
+        margin: 0;
         backdrop-filter: blur(10px);
     }
 
@@ -779,15 +779,14 @@ form button:hover {
 
     /* Map controls */
     .map-controls {
-        left: auto;
-        right: 1rem;
-        bottom: 70px;
+        bottom: 3rem;
         left: 1rem;
+        gap: 0.5rem;
     }
 
     .control-button {
-        width: 40px;
-        height: 40px;
+        width: 2rem;
+        height: 2rem;
     }
 
 }
@@ -1019,6 +1018,7 @@ textarea::-webkit-scrollbar-thumb:hover {
 .advanced-filters {
     position: relative;
     display: flex;
+    flex-grow: 1;
     gap: 0.75rem;
   }
   
@@ -1340,7 +1340,6 @@ textarea::-webkit-scrollbar-thumb:hover {
     }
     
     .advanced-filters {
-      flex-direction: column;
       gap: 0.5rem;
     }
     
